# MyCobot_ROS2

./: README.md
install/: local_setup.sh  setup.sh
install/mecharm/share/mecharm/: package.sh
install/mecharm_communication/share/mecharm_communication/: package.sh
install/mecharm_interfaces/share/mecharm_interfaces/: local_setup.sh  package.sh
install/mecharm_pi/share/mecharm_pi/: package.sh
install/myarm_300/share/myarm_300/: package.sh
install/myarm_c650/lib/myarm_c650/: debug  follow_display  simple_gui  slider_control  teleop_keyboard  test
install/myarm_c650/share/myarm_c650/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/myarm_m750/lib/myarm_m750/: combined_control  follow_display  read_control  simple_gui  slider_control  teleop_keyboard
install/myarm_m750/share/myarm_m750/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mybuddy/share/mybuddy/: package.sh
install/mycobot_280/share/mycobot_280/: package.sh
install/mycobot_280_arduino/lib/mycobot_280_arduino/: camera_display  detect_marker  follow_display  following_marker  listen_real  listen_real_of_topic  opencv_camera  simple_gui  slider_control  teleop_keyboard
install/mycobot_280_arduino/share/mycobot_280_arduino/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mycobot_280_moveit2/share/mycobot_280_moveit2/: .setup_assistant  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mycobot_280_moveit2_control/lib/mycobot_280_moveit2_control/: sync_plan  sync_plan_arduino  sync_plan_rdkx5
install/mycobot_280_moveit2_control/share/mycobot_280_moveit2_control/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mycobot_280_rdkx5/lib/mycobot_280_rdkx5/: follow_display  listen_real  simple_gui  slider_control  teleop_keyboard
install/mycobot_280_rdkx5/share/mycobot_280_rdkx5/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mycobot_280_riscv/lib/mycobot_280_riscv/: camera_display  follow_display  listen_real  (+4 more)
install/traj_scripts/share/traj_scripts/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/traj_scripts/share/traj_scripts/cmake/: traj_scriptsConfig.cmake
install/traj_scripts/share/traj_scripts/launch/: traj_scripts.launch.py
log/: latest_build
src/traj_scripts/: CMakeLists.txt
src/traj_scripts/scripts/: ghost.py
src/traj_scripts/src/: plan.cpp  traj_scripts.cpp
(+106 files in other folders)
